--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,11 @@
 body {
-    background-color: rgb(85, 69, 48);
+    background-color: rgb(34, 34, 144);
     font-family: Bai Jamjuree;
 }
 
 footer {
-    background-color: black;
-    color: white;
+    background-color: powderblue;
+    color: black;
     bottom: 0;
     position: fixed;
     width: 100%;
