--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@ body {
 
 footer {
     background-color: powderblue;
-    color: black;
+    color: powderblue;
     bottom: 0;
     position: fixed;
     width: 100%;
