--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(34, 34, 144);
-    font-family: Embed code;
+    font-family: "Embed code";
     color:powderblue;
 }
 
