--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 footer {
-    background-color: powderblue;
+    background-color: rgba(9, 60, 66, 0.795);
     color: powderblue;
     bottom: 0;
     position: fixed;
