--- a/assets/style.css
+++ b/assets/style.css
@@ -5,12 +5,12 @@ body {
 }
 
 footer {
-    background-color: rgba(9, 60, 66, 0.795);
-    color: powderblue;
+    background-color: rgba(120, 222, 233, 0.795);
+    color: rgb(20, 20, 20);
     bottom: 0;
     position: fixed;
     width: 100%;
-    height: 2rem;
+    height: 4rem;
 }
 
 footer p{
