--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,11 @@
+#container{
+display:flex 
+}
+.cartao{
+    margin: 1rem 1rem;
+    background-color: rgb(19, 58, 60);
+}
+
 body {
     background-color: rgb(0, 0, 0);
     font-family: "Protest Revolution";
@@ -7,7 +15,7 @@ body {
 footer {
     background-color: rgba(120, 222, 233, 0.795);
     color: rgb(20, 20, 20);
-    bottom: 0;
+    bottom: 0; 
     position: fixed;
     width: 100%;
     height: 4rem;
