--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,7 @@ body {
     background-color: rgb(0, 0, 0);
     font-family: "Protest Revolution";
     color:powderblue;
+    font-size: 1.5rem;
 }
 
 footer {
