--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,13 @@
 #container{
 display:flex 
 }
+
 .cartao{
     margin: 1rem 1rem;
     background-color: rgb(19, 58, 60);
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33% -6rem);
 }
 
 body {
