--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,11 @@ display:flex
     flex-basis: calc(33% -6rem);
 }
 
+.cartao__conteudo {
+text-align: center;
+height:100%;
+}
+
 body {
     background-color: rgb(0, 0, 0);
     font-family: "Protest Revolution";
