--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@ footer {
     background-color: rgba(120, 222, 233, 0.795);
     color: rgb(20, 20, 20);
     bottom: 0; 
-    position: fixed;
+    position: fixed;_conteudo{
     width: 100%;
     height: 4rem;
 }
